--- a/public/views/includes/editpersonal.jade
+++ b/public/views/includes/editpersonal.jade
@@ -1,43 +1,40 @@
-form
-  .row
-    .col-md-3
-      label(for="currentUserFirstName") First Name
+h3 Edit Profile
+form.form-horizontal
+  .form-group
+    label.col-sm-2(for="currentUserFirstName") First Name
+    .col-sm-4
       input(type="text" id="currentUserFirstName" ng-model="currentUser.firstname" placeholder="First Name" required)
-      p6 Example: John
-    .col-md-3
-      label(for="currentUserLastName") Last Name
+    label.col-sm-2(for="currentUserLastName") Last Name
+    .col-sm-4
       input(type="text" id="currentUserLastName" ng-model="currentUser.lastname" placeholder="Last Name" required)
-      p6 Example: Smith
-    .col-md-3
-      label(for="currentUserEmail1") E-Mail Address
+  .form-group
+    label.col-sm-2(for="currentUserEmail1") E-Mail Address
+    .col-sm-6
       input(type="email" id="currentUserEmail1" ng-model="currentUser.email1" placeholder="E-Mail" required)
-      p6 Example: john.smith@gmail.com
-  div
-    label(for="currentUserType") Membership Level
-    select(id="currentUserType" ng-model="currentUser.type" required)
-      option(value="0") Team Member
-      option(value="1") Team Leader
-      option(value="2") Manager
-  div.row
-    div.col-md-4(ng-if="currentUser.type > 0")
-      label(for="currentUserCompany") Company/Organization
+      //- SHOULD THIS BE HERE???
+  //- .form-group
+  //-   label.col-sm-2(for="currentUserType") Membership Level
+  //-   .col-sm-6
+  //-     select(id="currentUserType" ng-model="currentUser.type" required)
+  //-       option(value="0") Team Member
+  //-       option(value="1") Team Leader
+  //-       option(value="2") Manager
+  .form-group(ng-if="currentUser.type > 0")
+    label.col-sm-2(for="currentUserCompany") Company/Organization
+    .col-sm-4
       input(type="text" id="currentUserCompany" ng-model="currentUser.company" placeholder="Company/Organization" required)
-      p6 Example: Serval Ventures
-    div.col-md-4(ng-if="currentUser.type > 0")
-      label(for="currentUserPosition") Position
+    label.col-sm-2(for="currentUserPosition") Position
+    .col-sm-4
       input(type="text" id="currentUserPosition" ng-model="currentUser.position" placeholder="Position" required)
-      p6 Example: Director of HR
-  div.row
-    div.col-md-4(ng-if="currentUser.type > 1")
-      label(for="currentUserEmail2") Alternate E-Mail Address
-      input(type="email" id="currentUserEmail2" ng-model="currentUser.email2" placeholder="Alternate E-Mail")
-      p6 Example: johnnyrocket@yahoo.com
-    div.col-md-4(ng-if="currentUser.type > 1")
-      label(for="currentUserOffPhone") Office Phone Number
+  .form-group(ng-if="currentUser.type > 1")
+    label.col-sm-2(for="currentUserOffPhone") Office Phone Number
+    .col-sm-4
       input(type="tel" id="currentUserOffPhone" ng-model="currentUser.offPhone" placeholder="Office Phone Number" required)
-      p6 Example: 555-555-5555
-    div.col-md-4(ng-if="currentUser.type > 1")
-      label(for="currentUserCellPhone") Cell Phone Number 
+    label.col-sm-2(for="currentUserCellPhone") Cell Phone Number 
+    .col-sm-4
       input(type="tel" id="currentUserCellPhone" ng-model="currentUser.cellPhone" placeholder="Cell Phone Number" required)
-      p6 Example: 666-666-6666
+  .form-group(ng-if="currentUser.type > 1")
+    label.col-sm-2(for="currentUserEmail2") Alternate E-Mail Address
+    .col-sm-4
+      input(type="email" id="currentUserEmail2" ng-model="currentUser.email2" placeholder="Alternate E-Mail")
   button(ng-click="editAccount()") Submit Changes
