adds navigation functionality for team management

--- a/public/views/includes/userpage.jade
+++ b/public/views/includes/userpage.jade
@@ -37,13 +37,21 @@
 .edit-personal-info(ng-if="userview === 1")
   include editpersonal.jade
   
-.teams-section(ng-show="userview === 2" ng-controller="TeamsController")  
-  h3 Team Menu
-  h4 Your Teams:
-  ul
-    li(ng-repeat="team in currentUser.teams") {{team.name}}
-      span(ng-show="team.management.includes(currentUser._id)" ng-click="getCurrentTeam(team._id)") &nbsp; Manage
-  .edit-current-team(ng-if="currentTeam")
+.teams-section(ng-controller="TeamsController")  
+  .team-list(ng-show="userview === 2")
+    h3 Team Menu
+    h4 Your Teams:
+    ul
+      li(ng-repeat="team in currentUser.teams") {{team.name}}
+        span(ng-show="team.management.includes(currentUser._id)" ng-click="getCurrentTeam(team._id)") &nbsp; Manage
+    .team-creation-section(ng-show="currentUser.type > 0")
+      h4 Would you like to create a team?
+        form(ng-submit="createTeam()")
+          label(for="team-name") Team Name
+          input(id="team-name" ng-model="team.name")
+          button(type="submit") Create Team
+      
+  .edit-current-team(ng-if="userview === 3")
     h4 {{currentTeam.name}}
     h5 Team Managers
     ul
@@ -51,17 +59,12 @@
     h5 Team Members
     ul
       li(ng-repeat="member in currentTeam.teamMembers" class="user-color-list-{{member.primaryColor}}") {{member.firstname}} {{member.lastname}}
-      label(for="") Add Team Members ( By Last Name )
+    label(for="") Add Team Members ( By Last Name )
     input(type="text" ng-model="currentTeamAddQuery.lastname")
     ul(ng-show="currentTeamAddQuery")
       li(ng-repeat="user in allUsers | filter:currentTeamAddQuery | limitTo:5" ng-if="user._id !== currentUser._id") {{user.firstname}} {{user.lastname}}
         span.add-person(ng-click="addToCurrentTeam(user._id)") &nbsp; + Add
-  .team-creation-section(ng-show="currentUser.type > 0")
-    h4 Would you like to create a team?
-      form(ng-submit="createTeam()")
-        label(for="team-name") Team Name
-        input(id="team-name" ng-model="team.name")
-        button(type="submit") Create Team
+          
         //- br
         //- label(for="") Add Team Members ( By Last Name )
         //- input(type="text" ng-model="query.lastname")
