--- a/public/views/includes/head.jade
+++ b/public/views/includes/head.jade
@@ -6,6 +6,7 @@ meta(property="og:type" content="website")
 meta(property="og:title" content="Quarius")
 meta(property="og:description" content="Quarius... A personality test for HR")
 meta(property="og:image" content="https://www.astrologyzone.com/wp-content/themes/JointsWP-master/assets/images/horoscopes/horoscope-article-hero/az_img_horoscope_aquarius.png")
+link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
 link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")
 link(rel="stylesheet", href="/css/application.css")
 script(src="./js/twitter.js")
