--- a/public/views/includes/userpage.jade
+++ b/public/views/includes/userpage.jade
@@ -61,8 +61,16 @@
     ul
       li(ng-repeat="manager in currentTeam.management") {{manager.firstname}} {{manager.lastname}}
     h5 Team Members
-    ul
-      li(ng-repeat="member in currentTeam.teamMembers" class="user-color-list-{{member.primaryColor}}") {{member.firstname}} {{member.lastname}}
+    .current-team-memberlist
+      .row(ng-repeat="member in currentTeam.teamMembers" class="user-color-list-{{member.primaryColor}}")
+        .col-sm-4
+          p {{member.firstname}} {{member.lastname}}
+        .col-sm-2
+          p {{member.primaryColor}}
+        .col-sm-2
+          p {{member.secondaryColor}}
+        .col-sm-2
+          p {{member.vert}}
     .add-team-members(ng-show="currentTeam.management.includes(currentUser._id)")
       label(for="") Add Team Members ( By Last Name )
       input(type="text" ng-model="currentTeamAddQuery.lastname")
