fixes add new team member filter

--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -132,6 +132,10 @@ input[type="password"]#signPassword {
   float: right;
 }
 
+.add-team-members ul {
+  list-style: none;
+}
+
 /******** END HEADER STYLING *********/
 
 /******** REGISTER MODAL ********/
