--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -36,7 +36,7 @@ header {
       padding-left: 1%;
     }
     a:hover {
-      color: khaki;
+      color: firebrick;
       text-decoration: none;
       cursor: pointer;
     }
@@ -65,12 +65,12 @@ nav {
       right: 5px;
       top: 21px;
     }
-    #log-error {
-      color: red;
-      position: absolute;
-      right: 40px;
-      top: 60px;
-    }
+    // #log-error {
+    //   color: red;
+    //   position: absolute;
+    //   right: 40px;
+    //   top: 60px;
+    // }
 }
 
 .register-form label,
@@ -104,6 +104,32 @@ input[type="password"]#signPassword {
   -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+#log-error-display{
+  position: absolute;
+  top: 79px;
+  right: 4px;
+  width: 446px;
+}
+
+#register-error-display {
+  margin: 1% auto;
+  max-width: 50%;
+}
+
+.panel-heading{
+  padding: 1% 1% 1% 2%;
+  h4 {
+    margin: 0;
+  }
+}
+
+.panel-body {
+  padding: 1% 1% 1% 3%;
+  p {
+    margin-bottom: 0;
+  }
 }
 
 #log-out {
