fixes add team member display and adds creator to list of team members

--- a/public/views/includes/sign-up.jade
+++ b/public/views/includes/sign-up.jade
@@ -65,7 +65,7 @@
       .col-sm-offset-6
         button.btn.btn-success(type="submit") Register
   .panel.panel-danger#register-error-display(ng-if="regMessage")
-    .panel-heading
-      h4 Error
+    //- .panel-heading
+    //-   h4 Error
     .panel-body
       p {{regMessage}}
