--- a/public/views/includes/home/userpage.jade
+++ b/public/views/includes/home/userpage.jade
@@ -1,18 +1,25 @@
 .user-profile-section(ng-show="userview === 0")
   h3 Hi {{currentUser.firstname}}
   .logged-results(ng-if="currentUser.primaryColor")
-    .row
-    .col-md-6
-      h4(ng-show="currentUser.primaryColor") Your Primary Color is: {{currentUser.primaryColor}}
-      h4(ng-repeat="color in colors" ng-show="color.name === currentUser.primaryColor" class="color-box-{{color.name}}") {{color.icon}} {{color.name}}
+    .row(ng-repeat="color in colors" ng-show="color.name === currentUser.primaryColor" class="color-box-{{color.name}}")
+      .col-md-4
+        h4(ng-show="currentUser.primaryColor") Your Primary Color is: {{currentUser.primaryColor}}
+      .col-md-3
+        h4() {{color.icon}} {{color.name}}
+      .col-md-3
+          ul
+            li(ng-repeat="attr in color.qualities") {{attr}}
+    .row(ng-repeat="color in colors" ng-show="color.name === currentUser.secondaryColor" class="color-box-{{color.name}}")
+      .col-md-4
+        h4(ng-show="currentUser.secondaryColor") Your Secondary Color is: {{currentUser.secondaryColor}}
+      .col-md-3
+        h4() {{color.icon}} {{color.name}}
+      .col-md-3
         ul
           li(ng-repeat="attr in color.qualities") {{attr}}
-    .col-md-6
-      h4(ng-show="currentUser.secondaryColor") Your Secondary Color is: {{currentUser.secondaryColor}}
-      h4(ng-repeat="color in colors" ng-show="color.name === currentUser.secondaryColor" class="color-box-{{color.name}}") {{color.icon}} {{color.name}}
-        ul
-          li(ng-repeat="attr in color.qualities") {{attr}}
-    h4(ng-show="currentUser.vert") You are an {{currentUser.vert}}
+    .row(class="color-box-{{currentUser.vert}}")
+      .col-md-12
+        h4(ng-show="currentUser.vert") You are an {{currentUser.vert}}
     .social-network-share
       h4 Like Us on Social Media
       .fb-share-button(data-href="https://quarius.herokuapp.com/" data-layout="button" data-size="large" data-mobile-iframe="true")
