adds dynamic copyright year and changes logo font

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -51,7 +51,7 @@ html(lang="en" ng-app="QuariusApp")
     footer
       .row
         .col-md-6
-          p &copy;2016 Quarius & Serval Ventures
+          p &copy;{{yearNow}} Quarius & Serval Ventures
         .col-md-6
           p Terms of Use & Privacy
           
