--- a/public/views/includes/home/userpage.jade
+++ b/public/views/includes/home/userpage.jade
@@ -91,6 +91,7 @@
       ul(ng-show="currentTeamAddQuery")
         li(ng-repeat="user in allUsers | filter:currentTeamAddQuery | limitTo:20" ng-if="privacyLevel(user)") {{user.firstname}} {{user.lastname}}
           span.add-person(ng-if="searchNewMembers(user._id)" ng-click="addToCurrentTeam(user._id)") &nbsp; + Add
+          span.add-manager(ng-if="searchNewManagement(user)" ng-click="addManagerToTeam(user._id)") &nbsp; + Add Manager
           
         //- br
         //- label(for="") Add Team Members ( By Last Name )
