adds basic password reset functionality

--- a/public/views/includes/sign-up.jade
+++ b/public/views/includes/sign-up.jade
@@ -40,7 +40,7 @@
             option(value="1") Team Leader
             option(value="2") Manager
       .form-group
-        label.col-sm-2(for="newUserPrivacy") Membership Level
+        label.col-sm-2(for="newUserPrivacy") Privacy Level
         .col-sm-4
           select(id="newUserPrivacy" ng-model="newUser.privacy" required)
             option(value="2") Public
